package renames, remove module